--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "Teeth project"
+name: Teeth project
 output_dir: ../docs
 navbar:
-  title: "Teeth project"
+  title: Teeth project
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fa-github
+    text: Source code
+    href: https://github.com/KiseokUchicago/teeth
 output:
   workflowr::wflow_html:
     toc: yes
